--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -13,6 +13,10 @@
         android:title="@string/voucher"
         android:icon="@drawable/ic_qrcode" />
 
+    <item
+        android:id="@+id/nav_delivery"
+        android:icon="@drawable/ic_trackdelivery"
+        android:title="Delivery" />
     <item android:id="@+id/nav_profile"
         android:title="@string/profile"
         android:icon="@drawable/ic_profile" />
