--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -6,10 +6,10 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="20dp"
+        android:id="@+id/imgOrderProduct"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,38 +22,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="36dp"
         android:textColor="#000000"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imgOrderProduct"
+        app:layout_constraintStart_toEndOf="@+id/imgOrderProduct"
+        app:layout_constraintTop_toTopOf="@+id/imgOrderProduct"
         tools:text="TextView" />
-
-    <TextView
-        android:id="@+id/txtOrderProductQuantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="5dp"
-        android:textColor="#000000"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/txtOrderProductPrice"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtOrderProductName"
-        tools:text="x1" />
-
-    <TextView
-        android:id="@+id/txtOrderProductPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:text="TextView"
-        android:textColor="#FF0303"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/txtOrderStatus"
@@ -69,13 +43,27 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtProductSize"
+        android:id="@+id/txtOrderProductQuantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="Size"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-        app:layout_constraintStart_toEndOf="@+id/imageView3" />
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="15dp"
+        android:textColor="#000000"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imgOrderProduct"
+        app:layout_constraintEnd_toStartOf="@+id/txtOrderProductPrice"
+        app:layout_constraintTop_toBottomOf="@+id/txtOrderStatus"
+        app:layout_constraintVertical_bias="1.0"
+        tools:text="x1" />
+
+    <TextView
+        android:id="@+id/txtOrderProductPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="@+id/txtOrderProductQuantity"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/txtOrderProductQuantity" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
