--- a/app/src/main/res/layout/fragment_insert_reward.xml
+++ b/app/src/main/res/layout/fragment_insert_reward.xml
@@ -130,7 +130,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/txtTermC"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -153,7 +153,7 @@
                     app:endIconTint="@color/black"
                     app:hintTextColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView9">
+                    app:layout_constraintTop_toBottomOf="@+id/txtTermC">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
